Thu Nov 30 01:14:21 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* Makefile.in (varobj.o): Delete special compile rule
	suppressing -Werror flag.
	* varobj.c (varobj_create): Initialize ``old_fi''.
	(varobj_update): Initialize ``templist''.

	* kod-cisco.c (cisco_kod_request): Simplify allocation of
 	``sync_ids'' eliminating uninitialized variable.

2000-11-28  Mark Salter  <msalter@redhat.com>

	* MAINTAINERS: Add Mark Salter to Write After Approval list.

Tue Nov 28 12:24:43 2000  Christopher Faylor <cgf@cygnus.com>

	* win32-nat.c (dll_code_sections_add): strdup -> xstrdup.

Mon Nov 27 11:45:52 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* remote.c (remote_write_bytes): Add default case to switch
 	initializing ``todo''. Ditto for ``nr_bytes''.
 	* top.c (catch_errors): Always initialize ``val''.
	* solib.c (info_sharedlibrary_command): Handle bfd_get_arch_size
 	returning an unknown size.
	* gdbtypes.c (count_virtual_fns): Always initialize ``vfuncs''.
	* breakpoint.c (break_at_finish_at_depth_command_1): Initialise
 	extra_args to NULL.
	(break_at_finish_command_1): Ditto.
 
Mon Nov 27 11:27:06 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* TODO: Add GFDL updates to 5.1 release criteria.

2000-11-26  Nick Clifton  <nickc@redhat.com>

        * configure.tgt (xscale-*): Add.
        * configure.host (xscale-*): Add.

2000-11-24  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* m68hc11-tdep.c  (gdb_print_insn_m68hc11): New function.
	(_initialize_m68hc11_tdep): Install it. Register bfd_arch_m68hc12.

2000-11-24  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* m68hc11-tdep.c (gdbarch_tdep): Move stack_correction global to here.
	(STACK_CORRECTION): Get stack correction using gdbarch_tdep.
	(m68hc11_saved_pc_after_call): Use STACK_CORRECTION.
	(m68hc11_frame_chain): Likewise.
	(m68hc11_frame_init_saved_regs): Likewise.
	(m68hc11_init_extra_frame_info): Likewise.
	(m68hc11_push_arguments): Likewise.
	(m68hc11_push_arguments): Likewise.